<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_plus_signin_btn_text_light_pressed"
    tools:context=".Select">


    <android.widget.Toolbar

        android:id="@+id/select_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/ap_white"
        android:elevation="15dp"

        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:foregroundGravity="bottom"
        android:layout_gravity="center_horizontal|bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:foregroundGravity="bottom">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/text_padding"
                    android:layout_weight="1"
                    android:text="@string/train_type"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/text_padding"
                    android:layout_weight="1"
                    android:text="@string/train_mass"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Spinner
                    android:id="@+id/train"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />
                <Spinner
                    android:id="@+id/mass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_dropdown"


                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

        </LinearLayout>

        <!--////////////////////////////////////////-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/text_padding"
                    android:layout_weight="1"
                    android:text="@string/train_start"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/text_padding"
                    android:layout_weight="1"
                    android:text="@string/train_stop"
                    android:textSize="13sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown"/>

                <Spinner
                    android:id="@+id/stop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

        </LinearLayout>

        <!--////////////////////////////////////////-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/text_padding"
                android:layout_weight="1"
                android:text="@string/train_time"
                android:textSize="13sp"
                android:textColor="@android:color/white"/>

            <Spinner
                android:id="@+id/time_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RadioButton
                android:gravity="start"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:visibility="invisible"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_mode_activated"
                android:id="@+id/demo_mode"
                android:textColor="@android:color/white"
                android:enabled="true"
                android:buttonTint="@android:color/holo_blue_dark"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/go"
                android:id="@+id/button"
                android:layout_gravity="center"
                android:gravity="center"

                android:foregroundGravity="center"
                android:onClick="nextactivity"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>